Revoie la syntaxe des variables dans l'ensemble du projet
